Add Cors Domains and Add Publishing to azure

--- a/Auth0WebAPI/appsettings.Development.json
+++ b/Auth0WebAPI/appsettings.Development.json
@@ -1,10 +1,14 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+    "Logging": {
+        "IncludeScopes": false,
+        "LogLevel": {
+            "Default": "Debug",
+            "System": "Information",
+            "Microsoft": "Information"
+        }
+    },
+    "Cors": {
+        "Origin": "http://localhost:4200",
+        "DevlopmentOrigin": "http://localhost:4200"
     }
-  }
 }
