--- a/Auth0WebAPI/appsettings.json
+++ b/Auth0WebAPI/appsettings.json
@@ -12,8 +12,12 @@
       }
     }
   },
-  "Auth0": {
-    "Domain": "",
-    "ApiIdentifier": ""
-  }
+    "Auth0": {
+        "Domain": "",
+        "ApiIdentifier": ""
+    },
+    "Cors": {
+        "Origin": "http://localhost:4200",
+        "DevlopmentOrigin": "http://localhost:4200"
+    } 
 }
