Update Production Origin

--- a/Auth0WebAPI/appsettings.json
+++ b/Auth0WebAPI/appsettings.json
@@ -17,7 +17,7 @@
         "ApiIdentifier": ""
     },
     "Cors": {
-        "Origin": "http://localhost:4200",
+        "Origin": "https://pizza42.azurewebsites.net",
         "DevlopmentOrigin": "http://localhost:4200"
     } 
 }
