Update user google connections on logging in

--- a/Auth0WebAPI/appsettings.json
+++ b/Auth0WebAPI/appsettings.json
@@ -13,8 +13,10 @@
     }
   },
     "Auth0": {
+        "ApiIdentifier": "",
         "Domain": "",
-        "ApiIdentifier": ""
+        "ManagementDomain": "",
+        "ManagementToken": ""
     },
     "Cors": {
         "Origin": "https://pizza42.azurewebsites.net",
