--- a/Auth0WebAPI/Auth0WebAPI.csproj
+++ b/Auth0WebAPI/Auth0WebAPI.csproj
@@ -9,8 +9,11 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Auth0.ManagementApi" Version="5.6.0" />
+        <PackageReference Include="Google.Apis.PeopleService.v1" Version="1.34.0.1245" />
         <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.1.1" />
+        <PackageReference Include="RestSharp" Version="106.3.1" />
     </ItemGroup>
 
     <ItemGroup>
